--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "popper.js": "^1.12.9",
     "request": "^2.83.0",
     "select2": "^4.0.6-rc.1",
+    "select2-bootstrap-theme": "0.1.0-beta.10",
     "socket.io": "^2.0.4",
+    "sweetalert2": "^7.1.3",
     "validator": "^9.2.0"
   }
 }
