--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "playlist-node",
+  "name": "playlist",
   "version": "1.0.0",
-  "description": "",
+  "description": "Play music by playlists",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
