--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Play music by playlists",
   "main": "app.js",
   "scripts": {
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -26,6 +27,7 @@
     "express-validator": "^4.3.0",
     "font-awesome": "^4.7.0",
     "gm": "^1.23.0",
+    "helmet": "^3.10.0",
     "imagemin": "^5.3.1",
     "jasmine": "^2.8.0",
     "jquery": "^3.2.1",
