--- a/package.json
+++ b/package.json
@@ -2,48 +2,32 @@
   "name": "playlist",
   "version": "1.0.0",
   "description": "Play music by playlists",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
-    "start": "nodemon app.js",
+    "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "Aviv Haruzi",
   "license": "MIT",
   "dependencies": {
-    "async": "^2.6.0",
-    "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0-beta.2",
-    "chalk": "^2.3.0",
-    "cheerio": "^1.0.0-rc.2",
-    "commander": "^2.12.2",
     "cookie-parser": "^1.4.3",
-    "debug": "^3.1.0",
-    "ejs": "^2.5.7",
+    "cors": "^2.8.4",
+    "dotenv": "^5.0.1",
     "express": "^4.16.2",
     "express-fileupload": "^0.3.0",
     "express-validation": "^1.0.2",
     "express-validator": "^4.3.0",
     "font-awesome": "^4.7.0",
-    "gm": "^1.23.0",
     "helmet": "^3.10.0",
-    "imagemin": "^5.3.1",
-    "jasmine": "^2.8.0",
     "jquery": "^3.2.1",
-    "lodash": "^4.17.4",
-    "moment": "^2.20.1",
-    "mongodb": "^3.0.0-rc0",
-    "mongoose": "^4.13.7",
+    "mongoose": "^5.0.12",
     "morgan": "^1.9.0",
-    "multer": "^1.3.0",
-    "mysql": "^2.15.0",
-    "nodemailer": "^4.4.1",
     "popper.js": "^1.12.9",
-    "request": "^2.83.0",
     "select2": "^4.0.6-rc.1",
     "select2-bootstrap-theme": "0.1.0-beta.10",
-    "socket.io": "^2.0.4",
     "sweetalert2": "^7.1.3",
     "validator": "^9.2.0"
   }
